# fastapi_test

./: .env  backend.dockerfile  data.json  data.txt  docker-compose.yml  pyproject.toml  requirements.txt  temp.py
alembic/: env.py
alembic/versions/: 247274eeb1db_1_first.py  65225cc08682_1_first.py
app/: initial_data.py  main.py
app/db/: __init__.py  init_db.py  models.py  session.py
scripts/: prestart.sh  start.sh
